--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-<link rel="stylesheet" type="text/css" href="style.css" />
+<title>
+    None
+</title>
+
+
+
 </head>
-
 <body>
-<div class="header">
-<marquee>  <h3> Special Offer, Just for pakistani citizens!GET <mark>50% Discount</mark> on any any item. </h3>
- </marquee> 
-</div>
+    <div class="parent">
+            <div class="child"></div>
+                    <div class="child"> </div>
+                            <div class="child"> </div>
+                                    <div class="child"> </div>
+                                            <div class="child"> </div>
 
 
-<div class="topnav">
-</div>
+
+    </div>
+
+
 </body>
 </html>
