--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <html>
 <head>
 <title>
-    None
+   Web page
 </title>
-
-
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 <body>
-    <div class="parent">
-            <div class="child"></div>
-                    <div class="child"> </div>
-                            <div class="child"> </div>
-                                    <div class="child"> </div>
-                                            <div class="child"> </div>
+<div class="header">
+	<marquee> <H1> Special Offer Just for Pakistani Citizens! Get <mark>50% Discount</mark> on any item. </H1> </marquee>
+</div>
+  
+  <div class="topnav"> 
+  <a href="#">Home</a>
+  <a href="#">About Us</a>
+  <a href="#">Services</a>
+  <a href="#">Products</a>
+  <a href="#">Contact Us</a>
+  </div> 
 
 
-
-    </div>
+    
 
 
 </body>
