--- a/index.html
+++ b/index.html
@@ -12,12 +12,32 @@
 </div>
   
   <div class="topnav"> 
-  <a href="#">Home</a>
-  <a href="#">About Us</a>
-  <a href="#">Services</a>
-  <a href="#">Products</a>
   <a href="#">Contact Us</a>
+  <a href="#">Services</a>
+  <a href="#">Portfolio</a>
+  <img src="img/logo.png">
+  
   </div> 
+  <div class="container">
+  <H1> Tech Karo Circle </H1> <hr align="center" width="50%">
+  <center><h2> We are Tech Karo students, and we work hard! We self-learn and never<br> Give-Up! join our team, because Tech is the future!</h2> </center>
+  <hr align="center" width="50%">
+  <center><button>Join Now!</button></center>	
+  </div>
+  
+
+  <div class="flex-container">
+ 
+  <div>
+  <center><h3>HTML</h3></center>
+  <p>sjhshjhhjhabdahdhadjkahjkdahggejhwegjwehgwehgwh</p>
+  	
+  </div>
+  <div>1</div>
+  <div>1</div>
+  	
+  </div>
+  
 
 
     
