--- a/index.html
+++ b/index.html
@@ -1,47 +1,80 @@
 <html>
+
 <head>
-<title>
-   Web page
-</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-
+  <title>
+    Web page
+  </title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
+
 <body>
-<div class="header">
-	<marquee> <H1> Special Offer Just for Pakistani Citizens! Get <mark>50% Discount</mark> on any item. </H1> </marquee>
-</div>
-  
-  <div class="topnav"> 
-  <a href="#">Contact Us</a>
-  <a href="#">Services</a>
-  <a href="#">Portfolio</a>
-  <img src="img/logo.png">
-  
-  </div> 
+    <section id="section-join">
+  <div class="header">
+    <marquee>
+      <H1> Special Offer Just for Pakistani Citizens! Get <mark>50% Discount</mark> on any item. </H1>
+    </marquee>
+  </div>
+
+  <div class="topnav">
+    <a href="#">Contact Us</a>
+    <a href="#">Services</a>
+    <a href="#">Portfolio</a>
+    <img src="img/logo.png">
+
+  </div>
+  <section id="section-join">
   <div class="container">
-  <H1> Tech Karo Circle </H1> <hr align="center" width="50%">
-  <center><h2> We are Tech Karo students, and we work hard! We self-learn and never<br> Give-Up! join our team, because Tech is the future!</h2> </center>
-  <hr align="center" width="50%">
-  <center><button>Join Now!</button></center>	
+    <H1> Tech Karo Circle </H1>
+    <hr align="center" width="50%">
+    <center>
+      <h2> We are Tech Karo students, and we work hard! We self-learn and never<br> Give-Up! join our team, because Tech
+        is the future!</h2>
+    </center>
+    <hr align="center" width="50%">
+    <center><button>Join Now!</button></center>
   </div>
-  
+  </section>
 
-  <div class="flex-container">
+
+  <section id="flex-container">
+    <figure>
+        <i class="fab fa-html5"></i>
+      <figcaption>
+        <h3>HTML</h3>
+        <P>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          Architecto quia non sequi aspernatur incidunt porro esse, inventore amet.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetu
+        </P>
+      </figcaption>
+    </figure>
+    <figure>
+        <i class="fab fa-css3"></i>
+        <figcaption>
+          <h3>CSS</h3>
+         <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          Architecto quia non sequi aspernatur incidunt porro esse, inventore amet.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetu</p>
+        </figcaption>
+    </figure>
+    <figure>
+        <i class="fab fa-js"></i>
+        <figcaption>
+          <h3>JS</h3>
+          <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto quia non sequi aspernatur incidunt porro esse, inventore amet.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetu</p>
+        </figcaption>
+    </figure>
+  </section>
  
-  <div>
-  <center><h3>HTML</h3></center>
-  <p>sjhshjhhjhabdahdhadjkahjkdahggejhwegjwehgwehgwh</p>
-  	
+
   </div>
-  <div>1</div>
-  <div>1</div>
-  	
-  </div>
-  
 
 
-    
+
+
 
 
 </body>
+
 </html>
