--- a/index.html
+++ b/index.html
@@ -69,7 +69,35 @@
  
 
   </div>
+  <section id="portfolio">
+  <h2> Porfolio </h2>
+  <figure>
+  <img src="img/p-1.png" alt="project-1"> 
+  <figcaption>
+  <img src="img/p-1.png" alt="project-1"> 
+  </figcaption>
+  </figure>
 
+<figure>
+  <img src="img/p-2.png" alt="project-2"> 
+  <figcaption> </figcaption>
+  </figure>
+<figure>
+  <img src="img/p-3.png" alt="project-3"> 
+  <figcaption> </figcaption>
+  </figure>
+<figure>
+  <img src="img/p-4.png" alt="project-4"> 
+  <figcaption> </figcaption>
+  </figure>
+<figure>
+  <img src="img/p-5.png" alt="project-5"> 
+  <figcaption> </figcaption>
+  </figure>
+  <figure>
+  <img src="img/p-6.png" alt="project-6"> 
+  <figcaption> </figcaption>
+  </figure>
 
 
 
