--- a/index.html
+++ b/index.html
@@ -69,40 +69,36 @@
  
 
   </div>
-  <section id="portfolio">
-  <h2> Porfolio </h2>
-  <figure>
-  <img src="img/p-1.png" alt="project-1"> 
-  <figcaption>
-  <img src="img/p-1.png" alt="project-1"> 
-  </figcaption>
-  </figure>
+  
+<section> 
+<div class="section">
 
-<figure>
-  <img src="img/p-2.png" alt="project-2"> 
-  <figcaption> </figcaption>
-  </figure>
-<figure>
-  <img src="img/p-3.png" alt="project-3"> 
-  <figcaption> </figcaption>
-  </figure>
-<figure>
-  <img src="img/p-4.png" alt="project-4"> 
-  <figcaption> </figcaption>
-  </figure>
-<figure>
-  <img src="img/p-5.png" alt="project-5"> 
-  <figcaption> </figcaption>
-  </figure>
-  <figure>
-  <img src="img/p-6.png" alt="project-6"> 
-  <figcaption> </figcaption>
-  </figure>
+<img src="img/p-1.png">
+<img src="img/p-2.png">
+<img src="img/p-3.png">
+
+
+
+</div>
+</section>
+<section>
+<div class="section1">
+<img src="img/p-4.png">
+<img src="img/p-5.png">
+<img src="img/p-6.png">
+</div>
+
+</section>
+<footer>
+<div class="footer">
+<i class="fab fa-facebook-f"></i>
+<i class="fab fa-twitter"></i>
+<i class="fab fa-youtube"></i>
 
 
 
 
-
+</div>
+</footer>
 </body>
-
 </html>
