--- a/index.html
+++ b/index.html
@@ -91,14 +91,33 @@
 </section>
 <footer>
 <div class="footer">
-<i class="fab fa-facebook-f"></i>
-<i class="fab fa-twitter"></i>
-<i class="fab fa-youtube"></i>
+ <div class="button">
+<center> <button>
+                    <i class="fab fa-twitter"></i>
 
 
+                </button>
 
+                <button>
+                    <i class="fab fa-youtube-square"></i>
+
+                </button>
+
+                <button>
+                    <i class="fab fa-facebook"></i>
+
+                </button>
+
+</center>
 
 </div>
+</div>
+<section>
+<div class="footer1">
+<h4> By <i class="fas fa-heart"></i> Syed Najam Us Saqib </h4> 
+
+ </div>
+</section>
 </footer>
 </body>
 </html>
